# test-wasm

./: .gitignore  Cargo.toml  Makefile  README.md
adapter/: wasi_snapshot_preview1.reactor.wasm
demo/: Cargo.toml
demo/src/: lib.rs
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
src/: lib.rs
