workspace = { members = ["demo"] }
[package]
name = "test-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_wasm"
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ]}
wit-parser = "0.201.0"
wit-component = "0.201.0"
