[package]
name = "test-wasm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.23", features = ["full"] }
wit-component = { workspace = true }
# TODO: update to 20.0.0
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"]}
# TODO: update to 20.0.0
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }